@@ -4,17 +4,12 @@ Components.pod - Former Developer's Guide
 
 =head1 DESCRIPTION
 
-The HTML::Mason::Component class reference is in L<HTML::Mason::Component>.
-
 The Component Developer's Guide is now in L<HTML::Mason::Devel>.
+
+The HTML::Mason::Component class reference is in L<HTML::Mason::Component>.
 
 =head1 AUTHOR
 
 Jonathan Swartz, swartz@transbay.net
-
-=head1 SEE ALSO
-
-L<HTML::Mason>,
-L<HTML::Mason::Commands>
 
 =cut
